--- a/Website/Index.html
+++ b/Website/Index.html
@@ -29,8 +29,8 @@
 			</div>
 			<div class= "login">
 				<ul>
-					<li><a href="#">Login</a></li>
-					<li><a href="#">SignUp</a></li>
+					<li><a href="loginpage.html">Login</a></li>
+					<li><a href="signup.html">SignUp</a></li>
 
 				</ul>
 			</div>
