--- a/Website/loginPage.html
+++ b/Website/loginPage.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="loginbox">
 		<img src="acclogin.png" class="acclogin">
-		<h1>Login Here</h1>
+		<h1 class = "inhead">Login Here</h1>
 		<form>
 			<p>Username</p>
 			<input type="text" name="" placeholder="Enter Username">
@@ -15,7 +15,7 @@
 			<input type="Password" name="" placeholder="Enter Password">
 			<input type="submit" name="" value="Login">
 			<a href="#"> Forgot Password</a><br>
-			<a href="#"> Don't have an account </a>
+			<a href="signup.html"> Don't have an account </a>
 		</form>
 
 </body>
